--- a/src/main/resources/views/todos.rocker.html
+++ b/src/main/resources/views/todos.rocker.html
@@ -1,5 +1,7 @@
+@import micronaut.todo.app.domain.Todo
+@args (Iterable<Todo> tasks)
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/logout}">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                 </li>
             </ul>
         </div>
@@ -43,25 +45,27 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="todo : ${todos}">
-                    <th scope="row" th:text=${todo.id}></th>
-                    <td th:text=${todo.todoItem}></td>
-                    <td th:text=${todo.completed}></td>
+                @for ((i, task) : tasks) {
+                <tr>
+                    <th scope="row">@task.getId()</th>
+                    <td> @task.getTodoItem()</td>
+                    <td> @task.getCompleted()</td>
                     <td>
-                        <form th:action="@{/todoUpdate/{id}(id=${todo.id})}" method="POST" enctype="multipart/form-data">
+                        <form action="/todoUpdate/@task.getId()" method="POST" enctype="multipart/form-data">
                             <div class="form-group">
                                 <button type="submit" class="btn btn-success btn-sm text-white">Update</button>
                             </div>
                         </form>
                     </td>
                     <td>
-                        <form th:action="@{/todoDelete/{id}(id=${todo.id})}" method="POST" enctype="multipart/form-data">
+                        <form action="/todoDelete/@task.getId()" method="POST" enctype="multipart/form-data">
                             <div class="form-group">
                                 <button type="submit" class="btn btn-danger btn-sm text-white">Delete</button>
                             </div>
                         </form>
                     </td>
                 </tr>
+                }
                 </tbody>
             </table>
             <div class="d-flex justify-content-center">
@@ -82,7 +86,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form th:action="@{/todoNew}" method="POST" enctype="multipart/form-data">
+                    <form action="/todoNew" method="POST" enctype="multipart/form-data">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Todo</label>
                             <input type="text" class="form-control" name="todoItem" aria-describedby="emailHelp" placeholder="Enter Todo">
